# monitorcontrol-gui

./: README.md  pyproject.toml
monitorcontrol_gui/: __main__.py  controller.py  model.py  view.py
monitorcontrol_gui/ui/: main_window.py  main_window.ui
tests/: test_monitorcontrol_gui.py
