[tool.poetry]
name = "monitorcontrol-gui"
version = "0.1.0"
description = "Qt GUI for monitorcontrol python module"
authors = ["Robert Nyström <golgafrincham@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PySide6 = "^6.2.3"
monitorcontrol = "^2.5.1"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
flake8 = "^4.0.1"
pytest = "^7.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
monitorcontrol_gui = "monitorcontrol_gui.__main__:main"